Issue of Modal Getting Overlap is now Resolved

--- a/raaghu-components/src/rds-comp-data-table/rds-comp-data-table.css
+++ b/raaghu-components/src/rds-comp-data-table/rds-comp-data-table.css
@@ -30,3 +30,15 @@
         transform: rotate(360deg);
     }
 }
+
+#sortTable{
+    .dropdown-adjusted.show{
+        z-index: 2;
+    }
+    tr{
+        &:hover{
+            z-index: 0;
+            position: relative;
+        }
+    }
+}
